add style to folder

--- a/books_authors_app/templates/index.html
+++ b/books_authors_app/templates/index.html
@@ -6,6 +6,9 @@
     <title>Books and Authors</title>
 </head>
 <body>
-    <h1>This page is working</h1>
+    <div class="add-book">
+        <h1>Add Book</h1>
+    </div>
+    
 </body>
 </html>
