add form to page

--- a/books_authors_app/templates/index.html
+++ b/books_authors_app/templates/index.html
@@ -8,6 +8,13 @@
 <body>
     <div class="add-book">
         <h1>Add Book</h1>
+        <form>
+            <label for="title">Title</label>
+            <input type="text" name="title">
+            <label for="desc">Description</label>
+            <input type="text" name="desc">
+            <input type="submit" name="submit" value="Add">
+        </form>
     </div>
     
 </body>
