--- a/books_authors_app/static/style.css
+++ b/books_authors_app/static/style.css
@@ -8,17 +8,12 @@
     text-align: center;
 }
 
-.add-book form {
-    display: flex;
-}
-
-.add-book label {
-    text-align: left;
+.add-book div {
     display: block;
+    padding: 0.25em;
 }
 
 .add-book input {
-    text-align: left;
-    display: block;
+    display: inline-block;
     float: right;
 }
