--- a/books_authors_app/templates/index.html
+++ b/books_authors_app/templates/index.html
@@ -11,11 +11,16 @@
     <div class="add-book">
         <h1>Add Book</h1>
         <form>
-            <label for="title">Title</label>
-            <input type="text" name="title">
-            <label for="desc">Description</label>
-            <input type="text" name="desc">
-            <input type="submit" name="submit" value="Add">
+            <div>
+                <label for="title">Title</label>
+                <input type="text" name="title">
+            </div>
+            <div>
+                <label for="desc">Description</label>
+                <input type="text" name="desc">
+            </div>
+            <br>
+            <input class="submit" type="submit" name="submit" value="Add">
         </form>
     </div>
     
