--- a/books_authors_app/templates/index.html
+++ b/books_authors_app/templates/index.html
@@ -23,6 +23,22 @@
             <input class="submit" type="submit" name="submit" value="Add">
         </form>
     </div>
-    
+    <div class="book-list">
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Action</th>
+            </tr>
+            {% for book in books %}
+                <tr>
+                    <td>{{ book.id }}</td>
+                    <td>{{ book.title }}</td>
+                    <td><a>View</a></td>
+                </tr>
+            {% endfor %}
+        </table>
+
+    </div>
 </body>
 </html>
