--- a/books_authors_app/static/style.css
+++ b/books_authors_app/static/style.css
@@ -1,3 +1,7 @@
+body {
+    display: flex;
+}
+
 .add-book {
     width: 25%;
     margin-left: auto;
@@ -16,4 +20,10 @@
 .add-book input {
     display: inline-block;
     float: right;
+}
+
+.book-list {
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
 }
