--- a/books_authors_app/static/style.css
+++ b/books_authors_app/static/style.css
@@ -5,6 +5,7 @@
 
 body {
     display: flex;
+    margin: 1em;
 }
 
 .add-book {
@@ -15,6 +16,7 @@ body {
 
 .add-book h1 {
     text-align: center;
+    margin: 0;
 }
 
 .add-book div {
@@ -31,4 +33,30 @@ body {
     width: 25%;
     margin-left: auto;
     margin-right: auto;
+}
+
+table {
+    width: auto;
+    margin: auto;
+    border: 0.15em solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 0.15em;
+    text-align: left;
+    border-left: 0.15em solid black;
+    /* border-right: 0.15em solid black; */
+}
+
+tbody tr:nth-child(odd) {
+    background-color: whitesmoke;
+}
+
+table td:first-child, table th:first-child {
+    border-left: none;
+}
+
+table td:last-child, table th:last-child {
+    border-right: none;
 }
